--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ html 	{
 body {
     margin: 60px auto;
     width: 70%;
-	color: e0e0e0
+	color: e0e0e0;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
