--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html 	{
 body {
     margin: 60px auto;
     width: 70%;
-	background-color: ccc;
+	background-color: #ccc;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
