--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,12 @@
 html 	{
 	width: 100%;
-	background-color: #fff;
+	background-color: #ccc;
 }
 body {
     margin: 60px auto;
+	padding: 30px;
     width: 70%;
-	background-color: #ccc;
+	background-color: #fff;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -19,11 +20,11 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
+    color: #369;
 }
 a:hover {
 	text-decoration: none;
-	color: #03c;
+	color: #006;
 }
 h1 {
     font-size: 3em;
