--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ nav ul, footer ul {
     padding: 0px;
     list-style: none;
     font-weight: bold;
+	text-align: center;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -33,6 +34,8 @@ h1 {
 h2 {
     font-size: 2em;
 	color: #333;
+	font-family:'Helvetica', 'Arial', 'Sans-Serif';
+	font-weight: bold;
 }
 p {
     font-size: 1.5em;
