--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@ body {
     width: 70%;
 	background-color: #fff;
 }
+nav	{
+	border-bottom: 1px solid #d5d5d5;
+}
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
